src/test/mocks/full/force-app/main/default/objects/CustomObjectOne__c/CustomObjectOne__c.object-meta.xml
<CustomObject>
    <description>This is a mock XML that represents a custom object</description>
    <label>Claim</label>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>