src/test/mocks/full/force-app/main/default/objects/CustomObjectOne__c/fields/CheckboxOne__c.field-meta.xml
<CustomField>
    <fullName>CheckboxOne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox One</label>
    <type>Checkbox</type>
</CustomField>