src/test/mocks/full/force-app/main/default/objects/CustomObjectOne__c/fields/DateOne__c.field-meta.xml
<CustomField>
    <fullName>DateofOccurrence__c</fullName>
    <label>Date One</label>
    <type>Date</type>
</CustomField>