src/test/mocks/full/force-app/main/default/objects/CustomObjectOne__c/fields/PicklistOne__c.field-meta.xml
<CustomField>
    <fullName>PicklistOne__c</fullName>
    <label>Picklist One</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist Value One</fullName>
            </value>
            <value>
                <fullName>Picklist Value Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>